--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,191 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap');
+
+* {
+  box-sizing: border-box;
+  font-family: 'Roboto', sans-serif;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body, h3 {
+  margin: 0;
+}
+
+.container {
+  width: 400px;
+  margin: 3rem auto;
+  padding: 2rem;
+  display: flex;
+  justify-content: space-between;
+  background-color: #666894;
+  color: #fff;
+}
+
+.board {
+  position: relative;
+  width: 166px;
+}
+
+.board-row {
+  display: flex;
+  margin: 0 auto;
+  width: 156px;
+  height: 50px;
+}
+
+.horisontal-line {
+  width: 166px;
+  height: 3px;
+  background-color: #9b58b8;
+  border-radius: 2px;
+}
+
+.vertical-line-1, .vertical-line-2 {
+  position: absolute;
+  top: -5px;
+  width: 3px;
+  height: 166px;
+  background-color: #9b58b8;
+  border-radius: 2px;
+}
+
+.vertical-line-1 {
+  left: 55px;
+}
+.vertical-line-2 {
+  left: 108px;
+}
+
+.cell {
+  width: 50px;
+  height: 50px;
+  margin-right: 3px;
+  border: none;
+  background-color: #423763;
+  font-size: 1.5rem;
+}
+
+.cell:nth-child(3n) {
+  margin-right: 0;
+}
+
+.score {
+  display: flex;
+  flex-direction: column;
+  margin-top: 1rem;
+  width: 140px;
+}
+
+.score > div {
+  margin-bottom: .5rem;
+}
+
+.modal {
+  width: 100vw;
+  height: 100vh;
+  background-color: rgba(0, 0, 0, .7);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: fixed;
+  top: 0;
+  left: 0;
+  color: black;
+  z-index: 2;
+}
+
+.modal.inactive {
+  display: none;
+}
+
+.window {
+  width: 400px;
+  background-color: #fff;
+  padding: 1rem;
+  border-radius: 3px;
+  text-align: center;
+}
+
+.window h3 {
+  margin: .5rem;
+}
+
+.window input {
+  width: 100%;
+  border: 1px solid #ccc;
+  padding: .5rem;
+  outline: none;
+}
+
+.window button {
+  border: 1px solid black;
+  width: 100px;
+  height: 30px;
+  background-color: darkslategray;
+  margin-top: 1rem;
+  color: #fff;
+}
+
+.finish-line {
+  width: 140px;
+  height: 3px;
+  background-color: red;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 1;
+  display: none;
+}
+
+.line-0 {
+  top: 24px;
+  left: 10px;
+  display: block;
+}
+
+.line-1 {
+  top: 78px;
+  left: 10px;
+  display: block;
+}
+
+.line-2 {
+  top: 127px;
+  left: 10px;
+  display: block;
+}
+
+.line-3 {
+  transform: rotate(90deg);
+  top: 75px;
+  left: -40px;
+  display: block;
+}
+
+.line-4 {
+  transform: rotate(90deg);
+  top: 75px;
+  left: 13px;
+  display: block;
+}
+
+.line-5 {
+  transform: rotate(90deg);
+  top: 75px;
+  left: 66px;
+  display: block;
+}
+
+.line-6 {
+  transform: rotate(45deg);
+  top: 81px;
+  left: 8px;
+  width: 160px;
+  display: block;
+}
+
+.line-7 {
+  transform: rotate(135deg);
+  top: 74px;
+  left: 5px;
+  width: 160px;
+  display: block;
 }
